# jgrep

./: Cargo.toml  LICENSE  README  README.rst
examples/: example.json
python/: README.rst  jgrep.py  pyproject.toml
python/tests/: test_jgrep.py
rust/: Cargo.toml  README.rst
rust/src/: main.rs
rust/tests/: jgrep_tests.rs
src/: jgrep.py  main.rs
tests/: test.json
