[package]
name = "jgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
anyhow = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
flatten-serde-json = "0.1.0"


[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
