[package]
name = "jgrep"
version = "0.1.0"
edition = "2021"
description = "JSON grep utility for key or value search"
license = "MIT"
authors = ["Justin Engel <jtengel08@gmail.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde_json = "1.0"
atty = "0.2"

[dev-dependencies]
tempfile = "3.10"
lazy_static = "1.4"